# FraserHallBranch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: Ian_publish.yml  package-build-and-publish.yml  testPy-package -publish.yml
legacyWorkflows/: pip-package-publish.yml
src/HallPy_Teach/experiments/: hallEffect.py
src/HallPy_uofgPhys_ShreyanshJF/: __init__.py  constants.py  curieWeiss.py  helper.py  main.py
src/HallPy_uofgPhys_ShreyanshJF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/HallPy_uofgPhys_ShreyanshJF/experiments/: __init__.py  allExperiments.py  curieWeiss.py  hallEffect.py  test.py
