[project]
name = "HallPy_uofgPhys_ShreyanshJF"
version = "0.0.28"
authors = [
    {name="Shreyansh Fofandi", email="shreyanshjf@gmail.com"},
    {name="Ian MacLaren", email="ian.MacLaren@glasgow.ac.uk"},
]
description = "A python library to aid physics students in performing lab activities. Developed for the School of Physics and Astronomy at the University of Glasgow."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freely Distributable",
    "Intended Audience :: Education",
    "Framework :: Jupyter",
    "Operating System :: OS Independent",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
]